Update gradle and deps to work with latest JDKs